@@ -1734,7 +1734,7 @@ ACCMSGS=OFF
 #    PLAYERTHREAD, SESSIONTHREAD, STATSTHREAD, CATALOGTHREAD, SMTPCLIENT,
 #    DBERRORQUE, DBERRORQUESTART, MAXNEWPERIP, MAXCONNSPERACCOUNT,
 #    RESPAWNTHREAD, ELECTRICTHREAD, MSDP, GMCP, ALL_AGEING, MCP, 
-#    CHANNELBACKLOGS
+#    CHANNELBACKLOGS, ANSIPROMPT, HYGEINE
 #
 # The default value is COMMAND_POSE, which disables the pose command, 
 #    along with QUITREASON and RETIREREASON, which are useless.
